macros/tests/compile_fail/name_not_string.stderr
error: [melbi] name attribute must be a string literal
 --> tests/compile_fail/name_not_string.rs:5:19
  |
5 | #[melbi_fn(name = 123)]
  |                   ^^^
